// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AssetWorkspace loadJSON should correctly parse and assign JSON properties 1`] = `
Object {
  "byId": Object {
    "testRoom": Object {
      "description": Object {
        "children": Array [],
        "data": Object {
          "tag": "Description",
        },
      },
      "exits": Array [],
      "fileName": undefined,
      "key": "testRoom",
      "name": Object {
        "children": Array [],
        "data": Object {
          "tag": "Name",
        },
      },
      "shortName": Object {
        "children": Array [],
        "data": Object {
          "tag": "ShortName",
        },
      },
      "summary": Object {
        "children": Array [],
        "data": Object {
          "tag": "Summary",
        },
      },
      "tag": "Room",
      "themes": Array [],
      "universalKey": "ROOM#001",
    },
  },
  "key": "Test",
  "metaData": Array [],
}
`;

exports[`AssetWorkspace setWML should correctly parse WML input 1`] = `
Object {
  "byId": Object {
    "a123": Object {
      "description": undefined,
      "exits": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "data": Object {
                "tag": "String",
                "value": "welcome",
              },
            },
          ],
          "data": Object {
            "from": "a123",
            "key": "a123#b456",
            "tag": "Exit",
            "to": "b456",
          },
          "wrapperTag": undefined,
        },
      ],
      "fileName": undefined,
      "key": "a123",
      "name": undefined,
      "shortName": undefined,
      "summary": undefined,
      "tag": "Room",
      "themes": Array [],
      "universalKey": "ROOM#UUID-0",
    },
    "b456": Object {
      "description": undefined,
      "exits": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "data": Object {
                "tag": "String",
                "value": "vortex",
              },
            },
          ],
          "data": Object {
            "from": "b456",
            "key": "b456#a123",
            "tag": "Exit",
            "to": "a123",
          },
          "wrapperTag": undefined,
        },
      ],
      "fileName": undefined,
      "key": "b456",
      "name": undefined,
      "shortName": undefined,
      "summary": undefined,
      "tag": "Room",
      "themes": Array [],
      "universalKey": "ROOM#UUID-1",
    },
  },
  "key": "Test",
  "metaData": Array [],
}
`;

exports[`AssetWorkspace setWML should look up import namespace mappings 1`] = `
Object {
  "byId": Object {
    "a123": Object {
      "description": undefined,
      "exits": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "data": Object {
                "tag": "String",
                "value": "welcome",
              },
            },
          ],
          "data": Object {
            "from": "a123",
            "key": "a123#b456",
            "tag": "Exit",
            "to": "b456",
          },
          "wrapperTag": undefined,
        },
      ],
      "fileName": undefined,
      "from": Object {
        "action": "Content",
        "payload": Object {
          "assetId": "testAsset",
          "fromKey": "base",
        },
      },
      "key": "a123",
      "name": undefined,
      "shortName": undefined,
      "summary": undefined,
      "tag": "Room",
      "themes": Array [],
      "universalKey": "testImport",
    },
    "b456": Object {
      "description": undefined,
      "exits": Array [
        Object {
          "children": Array [
            Object {
              "children": Array [],
              "data": Object {
                "tag": "String",
                "value": "vortex",
              },
            },
          ],
          "data": Object {
            "from": "b456",
            "key": "b456#a123",
            "tag": "Exit",
            "to": "a123",
          },
          "wrapperTag": undefined,
        },
      ],
      "fileName": undefined,
      "key": "b456",
      "name": undefined,
      "shortName": undefined,
      "summary": undefined,
      "tag": "Room",
      "themes": Array [],
      "universalKey": "ROOM#UUID-0",
    },
    "c789": Object {
      "description": undefined,
      "fileName": undefined,
      "from": Object {
        "action": "Content",
        "payload": Object {
          "assetId": "testAsset",
          "fromKey": "Feature2",
        },
      },
      "key": "c789",
      "name": undefined,
      "tag": "Feature",
      "universalKey": "testFeature",
    },
  },
  "key": "Test",
  "metaData": Array [
    Object {
      "children": Array [
        Object {
          "children": Array [],
          "data": Object {
            "from": "base",
            "key": "a123",
            "tag": "Room",
          },
        },
        Object {
          "children": Array [],
          "data": Object {
            "from": "Feature2",
            "key": "c789",
            "tag": "Feature",
          },
        },
      ],
      "data": Object {
        "from": "testAsset",
        "mapping": Object {},
        "tag": "Import",
      },
    },
  ],
}
`;
